# WindEnergyDashboard

./: .gitignore  Home.py  pyproject.toml
notebooks/: base_testing_book.ipynb  process_data.ipynb
pages/: Power_Analysis.py
windenergydashboard/: utils.py
