[tool.poetry]
name = "windenergydashboard"
version = "0.1.0"
description = ""
authors = ["Johnathon Hyland <johnny-hyland@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
streamlit = "^1.38.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
